[gd_scene load_steps=4 format=3 uid="uid://bwhjdq4gqd1ic"]

[ext_resource type="Texture2D" uid="uid://cmstotctfql6q" path="res://icon.svg" id="1_4byry"]
[ext_resource type="Script" path="res://Scripts/shoot_tower.gd" id="1_xci0r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_houeq"]
radius = 150.0

[node name="ShootTower" type="Node2D"]
position = Vector2(652, 251)
scale = Vector2(0.444575, 0.444575)
script = ExtResource("1_xci0r")
metadata/Range = 150
metadata/ObjectType = "Tower"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4byry")

[node name="ShootPoint" type="Node2D" parent="Sprite2D"]
position = Vector2(-0.000301276, -83.2256)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
metadata/AreaType = "Range"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(2.24902, 2.23928)
shape = SubResource("CircleShape2D_houeq")

[connection signal="area_entered" from="Area2D" to="." method="RangeEntered"]
[connection signal="area_exited" from="Area2D" to="." method="RangeExited"]
